authors fixed validation and requests
